feat: adicionar controller do SABOR
