# app.js
@@ -1,10 +1,6 @@
 //IMPORT DAS DEPENDENDIAS
 const express = require('express')
 const cors = require('cors')
-const bodyParser = require('body-parser')
-
-//PERMITINDO A UTILIZAÇÃO DO JSON NO BODY DAS REQUISIÇÕES
-const bodyParserJSON = bodyParser.json()
 
 //CRIANDO UM OBJETO DO EXPRESS PARA CRIAR A API
 const app = express()
@@ -19,3 +15,11 @@ const corsOptions = {
 
 //APLICAR AS CONFIGURAÇÕES DO CORS NO APP (EXPRESS)
 app.use(cors(corsOptions))
+
+const saborRouter = require('./routes/sabor.router.js')
+app.use('/v1/delicia-gelada/admin/sabor', cors(), saborRouter)
+
+//Fazer o start da API
+app.listen(8080, function () {
+    console.log('API aguardando novas requisições...')
+})
