# routes/sabor.router.js
@@ -1,0 +1,58 @@
+const express = require('express')
+const bodyParser = require('body-parser')
+
+//PERMITINDO A UTILIZAÇÃO DO JSON NO BODY DAS REQUISIÇÕES
+const bodyParserJSON = bodyParser.json()
+
+const router = express.Router()
+
+const controllerSabor = require('../controller/sabor/controller_sabor.js')
+
+//                              ENDPOINTS SABOR
+router.post('/', bodyParserJSON, async function (request, response) {
+    let dados = request.body
+    let contentType = request.headers['content-type']
+
+    let result = await controllerSabor.inserirNovoSabor(dados, contentType)
+
+    response.status(result.status_code)
+    response.json(result)
+})
+
+router.get('/', async function (request, response) {
+    let result = await controllerSabor.listarSabor()
+
+    response.status(result.status_code)
+    response.json(result)
+})
+
+router.get('/:id', async function (request, response) {
+    let id = request.params.id
+
+    let result = await controllerSabor.buscarSabor(id)
+
+    response.status(result.status_code)
+    response.json(result)
+})
+
+router.put('/:id', bodyParserJSON, async function (request, response) {
+    let id = request.params.id
+    let dados = request.body
+    let contentType = request.headers['content-type']
+
+    let result = await controllerSabor.atualizarSabor(dados, id, contentType)
+
+    response.status(result.status_code)
+    response.json(result)
+})
+
+router.delete('/:id', async function (request, response) {
+    let id = request.params.id
+
+    let result = await controllerSabor.excluirSabor(id)
+
+    response.status(result.status_code)
+    response.json(result)
+})
+
+module.exports = router
